--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,3 +1,8 @@
-title=Title
+title=App de Prueba
 appTitle=View1
 appDescription=App Description
+selection=Parametros de entrada
+shipName=Ship Name
+country=Country
+btnFilter=Filtrar
+btnClearFilter=Limpiar
